--- a/index.html
+++ b/index.html
@@ -16,48 +16,121 @@
     href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@500&family=Puritan&family=Roboto&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-  integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
+  <div class="grille-accueil">
 
-  <nav>
-    <a href="#" class="nav-icon" aria-label="visit homepage" aria-current="page">
-      <span>K'Jet occas</span>
-    </a>
+    <!-- Navigation -->
 
-    <div class="main-navlinks">
-      <button class="hamburger" type="button" aria-label="Toggle navigation" aria-expanded="false">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+    <nav>
+      <a href="#" class="nav-icon" aria-label="visit homepage" aria-current="page">
+        <span>K'Jet occas</span>
+      </a>
+
+      <div class="main-navlinks">
+        <button class="hamburger" type="button" aria-label="Toggle navigation" aria-expanded="false">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
+
+      <div class="navlinks-container">
+        <a href="#" aria-current="page">Accueil</a>
+        <a href="#">Presentation</a>
+        <a href="#">Achats / Ventes</a>
+        <a href="#">Nos Photos</a>
+        <a href="#">Contact</a>
+      </div>
+
+      <div class="vide"></div>
+
+      <div class="contact-nav">
+        <i class="fa-solid fa-phone"></i>
+        <p>08 36 65 65 65</p>
+      </div>
+    </nav>
+
+    <!-- Présentation -->
+    <div class="presentation">
+      <i class="fa-solid fa-pallet"></i>
+      <h1>K'jet occass</h1>
+      <p>Achat et vente de palettes à Grenoble. </p>
+      <a href="/informations.html">En savoir plus</a>
     </div>
 
-    <div class="navlinks-container">
-      <a href="#" aria-current="page">Accueil</a>
-      <a href="#">Presentation</a>
-      <a href="#">Achats / Ventes</a>
-      <a href="#">Nos Photos</a>
-      <a href="#">Contact</a>
+    <!-- Slider -->
+    <div class="slider">
+      <div class="container-slides">
+        <img src="assets/img/headerBG.jpeg" class="active">
+        <img src="assets/img/Gallerie4.webp">
+        <img src="assets/img/Gallerie7.jpeg">
+      </div>
+      <div class="cont-btn">
+        <div class="btn-nav left">
+          <img src="assets/img/chevron-gauche.svg" alt="chevron gauche">
+        </div>
+        <div class="btn-nav right">
+          <img src="assets/img/chevron-droit.svg" alt="chevron droit">
+        </div>
+      </div>
     </div>
 
-    <div class="contact-nav">
-      <i class="fa-solid fa-phone"></i>
-      <p>08 36 65 65 65</p>
+    <!-- Avantages -->
+    <div class="choix">
+      <h2 class="titre-choix">
+        Découvrez les avantages <br>
+        de K'Jet occas
+      </h2>
+      <div class="infos">
+        <i class="fa-solid fa-dolly"></i>
+        <p>Chargement Rapide</p>
+      </div>
+      <div class="infos">
+        <i class="fa-solid fa-pallet"></i>
+        <p>Tous types de palettes</p>
+      </div>
+      <div class="infos">
+        <i class="fa-solid fa-chair"></i>
+        <p>Vente de palettes pour la confection de meubles</p>
+      </div>
+      <div class="infos">
+        <i class="fa-solid fa-map-location-dot"></i>
+        <p>Facile d'accès</p>
+      </div>
+
+      <div class="cont-medias">
+        <div class="media">
+          <a href="#">
+            <img src="ressources/instagram.svg" alt="icon instagram">
+          </a>
+        </div>
+        <div class="media">
+          <a href="#">
+            <img src="ressources/twitter.svg" alt="icon twitter">
+          </a>
+        </div>
+        <div class="media">
+          <a href="#">
+            <img src="ressources/facebook.svg" alt="icon facebook">
+          </a>
+        </div>
+      </div>
     </div>
 
-  </nav>
+  </div>
 
-  
 
-   
 
-  
+
+
+
+
 
 
 
