--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accueil</title>
+  <title>Contact</title>
 
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/style.css">
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@500&family=Puritan&family=Roboto&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Bitter:wght@800&Fira+Sans+Condensed:wght@500&family=Puritan&family=Roboto&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -22,8 +22,6 @@
 </head>
 
 <body>
-
-  <div class="grille-accueil">
 
     <!-- Navigation -->
 
@@ -56,84 +54,51 @@
       </div>
     </nav>
 
-    <!-- Présentation -->
-    <div class="presentation">
-      <i class="fa-solid fa-pallet"></i>
-      <h1>K'jet occass</h1>
-      <p>Achat et vente de palettes à Grenoble. </p>
-      <a href="/informations.html">En savoir plus</a>
-    </div>
+    <!-- Accueil -->
 
-    <!-- Slider -->
-    <div class="slider">
-      <div class="container-slides">
-        <img src="assets/img/headerBG.jpeg" class="active">
-        <img src="assets/img/Gallerie4.webp">
-        <img src="assets/img/Gallerie7.jpeg">
-      </div>
-      <div class="cont-btn">
-        <div class="btn-nav left">
-          <img src="assets/img/chevron-gauche.svg" alt="chevron gauche">
+    <header>
+      <div class="accueil-opacite">
+        <div class="accueil-text-container">
+          <div class="main-h1"> K'Jetoccas </div>
+          <h2>Achat et vente de palettes à Grenoble</h2>
+          <p>Sauvegardez l'environnement en achetant nos palettes</p>
         </div>
-        <div class="btn-nav right">
-          <img src="assets/img/chevron-droit.svg" alt="chevron droit">
-        </div>
-      </div>
-    </div>
 
-    <!-- Avantages -->
-    <div class="choix">
-      <h2 class="titre-choix">
-        Découvrez les avantages <br>
-        de K'Jet occas
-      </h2>
-      <div class="infos">
-        <i class="fa-solid fa-dolly"></i>
-        <p>Chargement Rapide</p>
-      </div>
-      <div class="infos">
-        <i class="fa-solid fa-pallet"></i>
-        <p>Tous types de palettes</p>
-      </div>
-      <div class="infos">
-        <i class="fa-solid fa-chair"></i>
-        <p>Vente de palettes pour la confection de meubles</p>
-      </div>
-      <div class="infos">
-        <i class="fa-solid fa-map-location-dot"></i>
-        <p>Facile d'accès</p>
-      </div>
-
-      <div class="cont-medias">
-        <div class="media">
-          <a href="#">
-            <img src="ressources/instagram.svg" alt="icon instagram">
-          </a>
-        </div>
-        <div class="media">
-          <a href="#">
-            <img src="ressources/twitter.svg" alt="icon twitter">
-          </a>
-        </div>
-        <div class="media">
-          <a href="#">
-            <img src="ressources/facebook.svg" alt="icon facebook">
-          </a>
+        <div class="cont-medias">
+          <div class="media">
+            <a href="#">
+              <img src="./assets/img/instagram.svg" alt="icon instagram">
+            </a>
+          </div>
+          <div class="media">
+            <a href="#">
+              <img src="./assets/img/facebook.svg" alt="icon facebook">
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-
-  </div>
-
-
-
-
-
-
-
-
-
-
+        <!-- <div class="homepage-infos-container">
+          <h2>Découvrer les avantages de K'Jetoccas</h2>
+          <div class="homepage-infos">
+            <div class="infos">
+              <i class="fa-solid fa-dolly"></i>
+              <p>Chargement Rapide</p>
+            </div>
+            <div class="infos">
+              <i class="fa-solid fa-pallet"></i>
+              <p>Tous types de palettes</p>
+            </div>
+            <div class="infos">
+              <i class="fa-solid fa-chair"></i>
+              <p>Vente de palettes pour la confection de meubles</p>
+            </div>
+            <div class="infos">
+              <i class="fa-solid fa-map-location-dot"></i>
+              <p>Facile d'accès</p>
+            </div>
+  
+          </div> -->
+        </div>
 
   <script src="./scripts/app.js"></script>
 </body>
