--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Bitter:wght@800&Fira+Sans+Condensed:wght@500&family=Puritan&family=Roboto&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Bitter:wght@800&Montserrat:wght@500&family=Puritan&family=Roboto&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -23,84 +23,86 @@
 
 <body>
 
-    <!-- Navigation -->
+  <!-- Navigation -->
 
-    <nav>
-      <a href="#" class="nav-icon" aria-label="visit homepage" aria-current="page">
-        <span>K'Jet occas</span>
-      </a>
+  <nav>
+    <a href="#" class="nav-icon" aria-label="visit homepage" aria-current="page">
+      <span>K'Jet occas</span>
+    </a>
 
-      <div class="main-navlinks">
-        <button class="hamburger" type="button" aria-label="Toggle navigation" aria-expanded="false">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
+    <div class="main-navlinks">
+      <button class="hamburger" type="button" aria-label="Toggle navigation" aria-expanded="false">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+
+    <div class="navlinks-container">
+      <a href="#" aria-current="page">Accueil</a>
+      <a href="#">Presentation</a>
+      <a href="#">Achats / Ventes</a>
+      <a href="#">Nos Photos</a>
+      <a href="#">Contact</a>
+    </div>
+
+    <div class="vide"></div>
+
+    <div class="contact-nav">
+      <i class="fa-solid fa-phone"></i>
+      <p>08 36 65 65 65</p>
+    </div>
+  </nav>
+
+  <!-- Accueil -->
+
+  <header>
+    <div class="accueil-opacite">
+      <div class="accueil-text-container">
+        <h2 class="titre-global">Achat et vente de palettes à Grenoble</h2>
+        <div class="main-h1"> K'Jetoccas </div>
       </div>
 
-      <div class="navlinks-container">
-        <a href="#" aria-current="page">Accueil</a>
-        <a href="#">Presentation</a>
-        <a href="#">Achats / Ventes</a>
-        <a href="#">Nos Photos</a>
-        <a href="#">Contact</a>
-      </div>
 
-      <div class="vide"></div>
-
-      <div class="contact-nav">
-        <i class="fa-solid fa-phone"></i>
-        <p>08 36 65 65 65</p>
-      </div>
-    </nav>
-
-    <!-- Accueil -->
-
-    <header>
-      <div class="accueil-opacite">
-        <div class="accueil-text-container">
-          <div class="main-h1"> K'Jetoccas </div>
-          <h2>Achat et vente de palettes à Grenoble</h2>
-          <p>Sauvegardez l'environnement en achetant nos palettes</p>
+      <div class="accueil-infos">
+        <div class="infos">
+          <i class="fa-solid fa-dolly"></i>
+          <p>Chargement Rapide</p>
         </div>
-
-        <div class="cont-medias">
-          <div class="media">
-            <a href="#">
-              <img src="./assets/img/instagram.svg" alt="icon instagram">
-            </a>
-          </div>
-          <div class="media">
-            <a href="#">
-              <img src="./assets/img/facebook.svg" alt="icon facebook">
-            </a>
-          </div>
+        <div class="infos">
+          <i class="fa-solid fa-pallet"></i>
+          <p>Tous types de palettes</p>
+        </div>
+        <div class="infos">
+          <i class="fa-solid fa-chair"></i>
+          <p>Vente de palettes pour la confection de meubles</p>
+        </div>
+        <div class="infos">
+          <i class="fa-solid fa-map-location-dot"></i>
+          <p>Facile d'accès</p>
         </div>
       </div>
-        <!-- <div class="homepage-infos-container">
-          <h2>Découvrer les avantages de K'Jetoccas</h2>
-          <div class="homepage-infos">
-            <div class="infos">
-              <i class="fa-solid fa-dolly"></i>
-              <p>Chargement Rapide</p>
-            </div>
-            <div class="infos">
-              <i class="fa-solid fa-pallet"></i>
-              <p>Tous types de palettes</p>
-            </div>
-            <div class="infos">
-              <i class="fa-solid fa-chair"></i>
-              <p>Vente de palettes pour la confection de meubles</p>
-            </div>
-            <div class="infos">
-              <i class="fa-solid fa-map-location-dot"></i>
-              <p>Facile d'accès</p>
-            </div>
-  
-          </div> -->
-        </div>
 
-  <script src="./scripts/app.js"></script>
+      <div class="scroll-btn">
+        <a href="#"><i class="fa-solid fa-chevron-down"></a></i>
+      </div>
+
+      <div class="cont-medias">
+        <div class="media">
+          <a href="#">
+            <img src="./assets/img/instagram.svg" alt="icon instagram">
+          </a>
+        </div>
+        <div class="media">
+          <a href="#">
+            <img src="./assets/img/facebook.svg" alt="icon facebook">
+          </a>
+        </div>
+      </div>
+    </div>
+
+      <script src="./scripts/app.js">
+      </script>
 </body>
 
 </html>
