--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
   <!-- Accueil -->
 
+  <div class="nav-under"></div>
+
   <header id="accueil">
     <div class="accueil-opacite">
       <div class="accueil-text-container">
@@ -120,9 +122,9 @@
         <div class="txt-presentation">
           <p>Entreprise familiale</p>
           <hr class="underline-blue">
-          <p>K'Jetoccas est spécialisée dans la collecte, la réparation, l'achat et la vente de palettes à Grenoble depuis plus de 40 ans.</p>
+          <p>K'Jetoccas est spécialisée dans <strong>la collecte, la réparation, l'achat et la vente de palettes</strong> à Grenoble depuis plus de 40 ans.</p>
           <p>
-            Grâce à des moyens de manutention spécifiques et une surface extérieure goudronnée et bien aménagéenous vous garantissons un accès facile et un chargement efficace. 
+            Grâce à des moyens de manutention spécifiques et une surface extérieure goudronnée et bien aménagée nous vous garantissons un <strong>accès facile</strong> et un <strong>chargement efficace</strong>. 
           </p>
         </div>
         <div class="img-presentation img1"></div>
@@ -132,13 +134,13 @@
           <p>Pour les professionnels</p>
           <hr class="underline-blue">
           <p>Vous êtes une entreprise et vous avez besoin d'acheter ou de louer des palettes pour votre activité ? </p>
-          <p>Ne cherchez plus ! Ici, nous avons un espace de stockage comprenant plus de 30 000 palettes de tous types pour vous assurer un service de qualité toute l'année !</p>
+          <p>Ne cherchez plus ! Ici, nous avons un espace de stockage comprenant <strong> plus de 30 000 palettes</strong> de tous types pour vous assurer un <strong> service de qualité</strong> toute l'année !</p>
         </div>
   
         <div class="txt-presentation">
           <p>Pour les particuliers</p>
           <hr class="underline-blue">
-          <p>Nous avons pris conscience de la hausse de la demande pour la fabrication de meubles en palettes.
+          <p>Nous avons pris conscience de la hausse de la demande pour la <strong>fabrication de meubles en palettes</strong>.
           </p>
           <p>Notre équipe est à votre disposition pour vous conseiller et vous proposer ce qui correspond à vos besoins. </p>
         </div>
@@ -147,6 +149,35 @@
       </div>
 
   </section>
+
+  <!-- Effet parallax  -->
+
+  <section class="parallax"></section>
+
+
+  <!-- Contact -->
+
+  <div class="trois-contacts-container">
+    <div class="contact-title">
+      <h2 class="titre-global">Contact</h2>
+      <hr class="separation">
+    </div> 
+    <div class="trois-contacts">
+      <div class="box">
+        <img src="./assets/img/placeholder.svg" alt="localisation icon">
+        <span>17 rue des alliés,<br>M.I.N de Grenoble,<br>38100 GRENOBLE FRANCE</span>
+      </div>
+      <div class="box">
+        <img src="./assets/img/phone-call.svg" alt="téléphone icon">
+        <span>08 36 65 65 65</span>
+      </div>
+      <div class="box">
+        <img src="./assets/img/email.svg" alt="email icon">
+        <span>kjetoccas@gmail.com</span>
+      </div>
+    </div>
+  </div>
+ 
 
   <script src="./scripts/app.js">
   </script>
